layout.css
/* ... */
.toolbar {
  display: flex;
  flex-flow: row nowrap;
  padding: 1px 2px;
  border-top: 1px solid var(--3d-controls-highlight);
  border-left: 1px solid var(--3d-controls-highlight);
  box-shadow: 0 -1px inset var(--3d-controls-shadow);
  overflow: hidden;
}

.toolbar__thumb {
  width: 3px;
  flex: 3px 0 0;
  margin: 2px 3px;
  box-shadow: inset -1px -1px var(--3d-controls-shadow),
    inset 1px 1px var(--3d-controls-highlight);
}

.toolbar__menuItem {
  flex-grow: 0;
  flex-shrink: 0;
  margin: 0;
  padding: 3px 8px;
  border: none;
  border-radius: 0;
  background: none;
  text-align: start;
  line-height: 1;
  white-space: nowrap;
  user-select: none;
  align-content: center;
}

.toolbar__menuItem:hover {
  box-shadow: inset -1px -1px var(--3d-controls-shadow),
    inset 1px 1px var(--3d-controls-highlight);
}

.toolbar__menuItem:active {
  padding: 4px 7px 2px 9px;
  box-shadow: inset -1px -1px var(--3d-controls-highlight),
    inset 1px 1px var(--3d-controls-shadow);
}

.toolbar__button {
  display: flex;
  flex-flow: column;
  align-items: center;
  text-align: center;
  min-width: 54px;
  padding: 2px 3px 3px;
  flex-shrink: 0;
}

.toolbar__button:hover {
  box-shadow: inset -1px -1px var(--3d-controls-shadow),
    inset 1px 1px var(--3d-controls-highlight);
}

.toolbar__button:active {
  padding: 3px 2px 2px 4px;
  box-shadow: inset -1px -1px var(--3d-controls-highlight),
    inset 1px 1px var(--3d-controls-shadow);
}

.toolbar__button:not(:hover) .toolbar__buttonIcon,
.toolbar__splitButton:not(:hover) .toolbar__buttonIcon {
  filter: grayscale(1);
}

.toolbar__buttonIcon {
  width: 22px;
  height: 22px;
  image-rendering: pixelated;
}

.toolbar__buttonText {
  margin-top: 2px;
  line-height: 1;
  white-space: nowrap;
}

.toolbar__splitButton {
  display: flex;
  flex-flow: row nowrap;
  flex-shrink: 0;
}

.toolbar__splitButton:hover .toolbar__splitButtonMain,
.toolbar__splitButton:hover .toolbar__splitButtonArrow {
  box-shadow: inset -1px -1px var(--3d-controls-shadow),
    inset 1px 1px var(--3d-controls-highlight);
}

.toolbar__splitButtonMain {
  display: flex;
  flex-flow: column;
  align-items: center;
  text-align: center;
  min-width: 54px;
  padding: 2px 3px 3px;
}

.toolbar__splitButton .toolbar__splitButtonMain:active {
  padding: 3px 2px 2px 4px;
  box-shadow: inset -1px -1px var(--3d-controls-highlight),
    inset 1px 1px var(--3d-controls-shadow);
}

.toolbar__splitButtonArrow {
  background: none;
  border: 0;
  display: flex;
  flex-flow: row;
  align-items: center;
  box-shadow: none;
  padding: 0 1px 1px 0;
}

.toolbar__splitButton .toolbar__splitButtonArrow:active {
  box-shadow: inset -1px -1px var(--3d-controls-highlight), inset 1px 1px var(--3d-controls-shadow);
  padding: 1px 0 0 1px;
}

.toolbar__splitButtonArrow img {
  width: 12px;
  height: 12px;
}

.toolbar__separator {
  border-left: 1px solid var(--3d-controls-shadow);
  box-shadow: 1px 0px var(--3d-controls-highlight);
  margin: 2px 3px 2px 2px;
}

.toolbar__spacer {
  flex: 1;
}

.toolbar__text {
  margin: 0 2px;
  align-self: center;
}

.toolbar__addressBar {
  width: 100%;
  height: 22px;
  display: flex;
  align-items: center;
  padding: 0 2px;
  background: var(--input-background);
  box-shadow: inset -1px -1px var(--3d-controls-highlight),
    inset 1px 1px var(--3d-controls-shadow),
    inset -2px -2px var(--3d-controls-face),
    inset 2px 2px var(--3d-controls-frame);
  white-space: nowrap;
  overflow: hidden;
}

.toolbar__addressBarIcon {
  width: 16px;
  height: 16px;
  image-rendering: pixelated;
  margin: 0 2px;
}

.toolbar__addressBarText {
  flex: 1;
  cursor: var(--input-cursor), text;
  margin: 0 4px;
}

.toolbar__addressBarButton {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 16px;
  height: 18px;
  background: var(--3d-controls-background);
  box-shadow: inset -1px -1px var(--3d-controls-shadow),
    inset 1px 1px var(--3d-controls-face),
    inset -2px -2px var(--3d-controls-frame),
    inset 2px 2px var(--3d-controls-highlight);
}

.toolbar__addressBarButton:active {
  box-shadow: inset 1px 1px var(--3d-controls-shadow),
    inset -1px -1px var(--3d-controls-shadow);
}

/* status bar */
.statusBar {
  width: 100%;
  height: 20px;
  display: flex;
  flex-flow: row nowrap;
  gap: 2px;
  padding-top: 2px;
  font: 11px 'MS Sans Serif Regular', sans-serif;
  background: var(--3d-controls-background);
}

.statusBar__section {
  display: flex;
  padding: 0 2px;
  flex-flow: row nowrap;
  align-items: center;
  box-shadow: inset -1px -1px var(--3d-controls-highlight),
    inset 1px 1px var(--3d-controls-shadow);
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.statusBar__icon {
  margin-right: 4px;
}

/* desktop */
.desktop {
  --desktop-item-size: calc(74 / 11 * 1em);
  --desktop-icon-size: calc(32 / 11 * 1em);

  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  padding-bottom: 28px;
  display: grid;
  grid-auto-flow: column;
  grid-template-rows: repeat(auto-fill, var(--desktop-item-size));
  grid-auto-columns: var(--desktop-item-size);
  font: 11px 'MS Sans Serif Regular', sans-serif;
  background-color: var(--desktop-background-color);
  background-image: var(--desktop-background-image);
  background-repeat: repeat;
  background-size: contain;
  z-index: -1;
  user-select: none;
}

.desktopIcon {
  position: relative;
  display: flex;
  flex-flow: column;
  align-items: center;
  width: var(--desktop-item-size);
  z-index: -1;
}

.desktopIcon__image {
  width: var(--desktop-icon-size);
  height: var(--desktop-icon-size);
  image-rendering: pixelated;
}

.desktopIcon__text {
  display: -webkit-box;
  text-align: center;
  word-wrap: break-word;
  white-space: break-spaces;
  overflow: hidden;
  background: var(--desktop-background-color);
  color: var(--desktop-foreground);
  margin-top: calc(6 / 11 * 1em);
  line-clamp: 2;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
}
/* ... */

